# authwatch

./: LICENSE  README.md  pyproject.toml  requirements.txt
authwatch/: __init__.py  cli.py  detectors.py  enrich.py  events.py  exporters.py  report.py  storage.py
authwatch/parsers/: __init__.py  nginx.py  ssh.py
sample_logs/: geoip_sample.csv
tests/: test_detectors.py  test_exporters.py  test_parsers.py
