[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "authwatch"
version = "0.1.0"
description = "Offline analyzer for SSH and web login brute-force attacks"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "authwatch contributors" }]
keywords = ["security", "bruteforce", "ssh", "logs", "blue-team", "soc"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Security",
    "Topic :: System :: Logging",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
authwatch = "authwatch.cli:main"

[project.urls]
Homepage = "https://github.com/yourname/authwatch"
Issues = "https://github.com/yourname/authwatch/issues"

[tool.setuptools.packages.find]
include = ["authwatch*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
